2002-05-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSeq.h: Fix bug matching sequences with zero length range.
	* Headers/gnustep/base/GSMime.h: Tell autogsdoc where to look for source
	* Headers/gnustep/base/GSXML.h: Updates for consistency etc.
	* Source/Additions/GSXML.m: ditto
	* Tools/AGSHtml.m: Modified for changed GSXML
	* Tools/AGSIndex.m: ditto
	* Tools/AGSParser.m: ditto
	* Tools/autogsdoc.m: ditto
	* Tools/defaults.m: Fixed typo
	Mostly, changes to make methods which were intended to be private
	really private, and lots of modifications to make mathod names
	consistent with OpenStep usage ... suggestions made by many people.
	* configure.ac: Use better names for GMP and ZLIB flags
	* configure: regenerate
	* Headers/gnustep/base/GSConfig.h.in: GMP and ZLIB update
	* Headers/gnustep/base/NSDecimal.h: GMP update
	* Headers/gnustep/base/UnixFileHandle.h: ZLIB update
	* Source/NSDecimal.m: GMP update
	* Source/UnixFileHandle.m: ZLIB update

2002-05-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSLog.m: Altered logging format for compatibility with
	MacOS-X (and easier collating).  Thanks to report by lcampbell

2002-05-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Unicode.m: GSFromUnicode(), GSToUnicode(), bugfix - ensure
	that returned memory is allocated from specified zone, rather than
	returning internal buffer.
	* Tools/AGSIndex.m: When a string missmatch is found when merging,
	update the output to the new string as well as warning.
	* Tools/autogsdoc.m: Don't automatically include refs to installed
	copies of the project being documented.

2002-05-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: Don't try to release memory using free()
	when it was allocated using NSZoneMalloc().
	* Tools/autogsdoc.m: Improve dependency rule management.
	* Tools/AGSParser.h: ditto
	* Tools/AGSParser.m: ditto
	* Tools/AGSIndex.h: ditto
	* Tools/AGSIndex.m: ditto